fix meta data UI wrap problem

--- a/src/style/poster.scss
+++ b/src/style/poster.scss
@@ -47,11 +47,11 @@
       padding:0 3px;
   }
   .from{
-      min-width: 7em;
+      min-width: 10em;
       flex: 1;
   }
   .members {
-      min-width: 13em;
+      min-width: 20em;
       flex: 1;
   }
 }
